--- a/index.html
+++ b/index.html
@@ -912,93 +912,93 @@
                 <div class="marquee-track">
                     <!-- İlk set -->
                     <div class="marquee-item">
-                        <img src="assets/images/pangram_logo.webp" alt="Pangram Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/pangram_logo.webp" alt="Pangram Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.pangram.com/" target="_blank" class="partner-link">Pangram'a Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/ChatPDF_LOGO.webp" alt="ChatPDF Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/ChatPDF_LOGO.webp" alt="ChatPDF Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.chatpdf.com/" target="_blank" class="partner-link">ChatPDF'ye Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/wonders_logo.svg" alt="Wonders Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/wonders_logo.svg" alt="Wonders Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.readwonders.com/" target="_blank" class="partner-link">Wonders'a Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/primalpictures_logo.svg" alt="Primal Pictures Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/primalpictures_logo.svg" alt="Primal Pictures Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.anatomy.tv/" target="_blank" class="partner-link">Primal Pictures'a Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/Lecturio_logo.PNG" alt="Lecturio Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/Lecturio_logo.PNG" alt="Lecturio Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.lecturio.com/" target="_blank" class="partner-link">Lecturio'ya Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/JOVE_LOGO.PNG" alt="JoVE Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/JOVE_LOGO.PNG" alt="JoVE Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.jove.com/" target="_blank" class="partner-link">JoVE'ye Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/mcgraw-hill_logo.svg" alt="AccessMedical Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/mcgraw-hill_logo.svg" alt="AccessMedical Logo" class="marquee-logo" loading="lazy">
                         <a href="https://access.mhmedical.com/" target="_blank" class="partner-link">AccessMedical'a Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/medicitv_logo.webp" alt="Medici.tv Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/medicitv_logo.webp" alt="Medici.tv Logo" class="marquee-logo" loading="lazy">
                         <a href="https://medici.tv/" target="_blank" class="partner-link">Medici.tv'ye Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/biorender_logo.webp" alt="BioRender Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/biorender_logo.webp" alt="BioRender Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.biorender.com/" target="_blank" class="partner-link">BioRender'a Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/wiley_logo.svg" alt="Wiley Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/wiley_logo.svg" alt="Wiley Logo" class="marquee-logo" loading="lazy">
                         <a href="https://onlinelibrary.wiley.com/" target="_blank" class="partner-link">Wiley'ye Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/aicoor_logo.webp" alt="Aicoor Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/aicoor_logo.webp" alt="Aicoor Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.aicoor.com/" target="_blank" class="partner-link">Aicoor'a Git</a>
                     </div>
                     
                     <!-- Aynı seti tekrarla (kesintisiz döngü için) -->
                     <div class="marquee-item">
-                        <img src="assets/images/pangram_logo.webp" alt="Pangram Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/pangram_logo.webp" alt="Pangram Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.pangram.com/" target="_blank" class="partner-link">Pangram'a Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/ChatPDF_LOGO.webp" alt="ChatPDF Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/ChatPDF_LOGO.webp" alt="ChatPDF Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.chatpdf.com/" target="_blank" class="partner-link">ChatPDF'ye Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/wonders_logo.svg" alt="Wonders Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/wonders_logo.svg" alt="Wonders Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.readwonders.com/" target="_blank" class="partner-link">Wonders'a Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/primalpictures_logo.svg" alt="Primal Pictures Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/primalpictures_logo.svg" alt="Primal Pictures Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.anatomy.tv/" target="_blank" class="partner-link">Primal Pictures'a Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/Lecturio_logo.PNG" alt="Lecturio Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/Lecturio_logo.PNG" alt="Lecturio Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.lecturio.com/" target="_blank" class="partner-link">Lecturio'ya Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/JOVE_LOGO.PNG" alt="JoVE Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/JOVE_LOGO.PNG" alt="JoVE Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.jove.com/" target="_blank" class="partner-link">JoVE'ye Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/mcgraw-hill_logo.svg" alt="AccessMedical Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/mcgraw-hill_logo.svg" alt="AccessMedical Logo" class="marquee-logo" loading="lazy">
                         <a href="https://access.mhmedical.com/" target="_blank" class="partner-link">AccessMedical'a Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/medicitv_logo.webp" alt="Medici.tv Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/medicitv_logo.webp" alt="Medici.tv Logo" class="marquee-logo" loading="lazy">
                         <a href="https://medici.tv/" target="_blank" class="partner-link">Medici.tv'ye Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/biorender_logo.png" alt="BioRender Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/biorender_logo.png" alt="BioRender Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.biorender.com/" target="_blank" class="partner-link">BioRender'a Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/wiley_logo.svg" alt="Wiley Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/wiley_logo.svg" alt="Wiley Logo" class="marquee-logo" loading="lazy">
                         <a href="https://onlinelibrary.wiley.com/" target="_blank" class="partner-link">Wiley'ye Git</a>
                     </div>
                     <div class="marquee-item">
-                        <img src="assets/images/aicoor_logo.webp" alt="Aicoor Logo" class="partner-logo" loading="lazy">
+                        <img src="assets/images/aicoor_logo.webp" alt="Aicoor Logo" class="marquee-logo" loading="lazy">
                         <a href="https://www.aicoor.com/" target="_blank" class="partner-link">Aicoor'a Git</a>
                     </div>
                 </div>
