--- a/index.html
+++ b/index.html
@@ -1004,7 +1004,7 @@
                     </div>
                     <div class="marquee-item">
                         <img src="assets/images/mcgraw-hill_logo.svg" alt="AccessMedical Logo" class="marquee-logo" loading="lazy">
-                        <a href="https://access.mhmedical.com/" target="_blank" class="partner-link">AccessMedical'a Git</a>
+                        <a href="https://www.mheducation.com/" target="_blank" class="partner-link">AccessMedical'a Git</a>
                     </div>
                     <div class="marquee-item">
                         <img src="assets/images/medicitv_logo.webp" alt="Medici.tv Logo" class="marquee-logo" loading="lazy">
@@ -1016,7 +1016,7 @@
                     </div>
                     <div class="marquee-item">
                         <img src="assets/images/wiley_logo.svg" alt="Wiley Logo" class="marquee-logo" loading="lazy">
-                        <a href="https://onlinelibrary.wiley.com/" target="_blank" class="partner-link">Wiley'ye Git</a>
+                        <a href="https://www.wiley.com/" target="_blank" class="partner-link">Wiley'ye Git</a>
                     </div>
                     <div class="marquee-item">
                         <img src="assets/images/aicoor_logo.webp" alt="Aicoor Logo" class="marquee-logo" loading="lazy">
