--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
     </nav>
 
 <!-- Hero Slider Yapısı -->
+<!-- Hero Slider Yapısı -->
 <main class="hero-slider-container">
     <div id="hero-slider" class="hero-slider">
         <!-- SLIDE 1: Mevcut İçerik (Video) -->
