--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
   
   <div class="group">
     <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center translatable">
-	Sağlık</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
+      Sağlık <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
     <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
       <a href="#primal-pictures" class="block text-gray-700 translatable">Primal Pictures</a>
