--- a/index.html
+++ b/index.html
@@ -66,174 +66,20 @@
     </div>
 </header>
     <nav class="bg-white shadow-md sticky top-0 z-10">
-        <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
-            <a class="text-2xl text-primary nav-logo" href="#">
-                <span class="lib-bold translatable">Lib</span><span class="translatable">Edge Eğitim ve Danışmanlık</span>
-            </a>
-            <button class="hamburger" aria-label="Menüyü aç/kapat" aria-expanded="false">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="nav-links flex items-center space-x-2 sm:space-x-6 text-xs sm:text-sm font-medium text-gray-700">
-
-
-<div class="relative group">
-<a id="products-menu-toggle" onclick="toggleProductsMenu()" class="hover:text-primary font-semibold flex items-center cursor-pointer sm:cursor-default">
-  <span class="translatable">Ürünler</span>
-  <i class="fas fa-chevron-down ml-1 text-xs"></i>
-</a>
-  
-    <div class="dropdown absolute left-0 mt-2 bg-white shadow-lg rounded-lg z-20 p-4 space-y-4 w-[340px] hidden sm:block">
-      <div>
-        <h4 class="text-sm font-bold text-primary mb-1 translatable">Yapay Zeka</h4>
-        <a href="#pangram" class="block text-gray-700 translatable">Pangram</a>
-        <a href="#chatpdf" class="block px-2 py-1 text-sm hover:text-primary translatable">ChatPDF</a>
-        <a href="#wonders" class="block px-2 py-1 text-sm hover:text-primary translatable">Wonders</a>
-        <a href="#piri-discovery" class="block px-2 py-1 text-sm hover:text-primary translatable">Piri Keşif</a>
-        <a href="#transleyt" class="block px-2 py-1 text-sm hover:text-primary translatable">Transleyt</a>
-      </div>
-  
-      <div>
-        <h4 class="text-sm font-bold text-primary mb-1 translatable">Sağlık</h4>
-        <a href="#primal-pictures" class="block px-2 py-1 text-sm hover:text-primary translatable">Primal Pictures</a>
-        <a href="#lecturio" class="block px-2 py-1 text-sm hover:text-primary translatable">Lecturio</a>
-        <a href="#nejmhealer" class="block px-2 py-1 text-sm hover:text-primary translatable">NEJMHealer</a>
-        <a href="#accessmedical" class="block px-2 py-1 text-sm hover:text-primary translatable">AccessMedical</a>
-        <a href="#cochrane-library" class="block px-2 py-1 text-sm hover:text-primary translatable">Cochrane Library</a>
-      </div>
-  
-      <div>
-        <h4 class="text-sm font-bold text-primary mb-1 translatable">Mühendislik</h4>
-        <a href="#accessengineering" class="block px-2 py-1 text-sm hover:text-primary translatable">AccessEngineering</a>
-        <a href="#biorender" class="block px-2 py-1 text-sm hover:text-primary translatable">BioRender</a>
-        <a href="#wiley-dergiler" class="block px-2 py-1 text-sm hover:text-primary translatable">Wiley Dergiler</a>
-        <a href="#wiley-kitaplar" class="block px-2 py-1 text-sm hover:text-primary translatable">Wiley Kitaplar</a>
-      </div>
-  
-      <div>
-        <h4 class="text-sm font-bold text-primary mb-1 translatable">Fen & Matematik</h4>
-        <a href="#jove-dergiler" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Research</a>
-        <a href="#jove-education" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Education</a>
-        <a href="#wiley-dergiler" class="block px-2 py-1 text-sm hover:text-primary translatable">Wiley Dergiler</a>
-        <a href="#wiley-kitaplar" class="block px-2 py-1 text-sm hover:text-primary translatable">Wiley Kitaplar</a>
-      </div>
-  
-      <div>
-        <h4 class="text-sm font-bold text-primary mb-1 translatable">Sosyal Bilimler</h4>
-        <a href="#jove-dergiler" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Research</a>
-        <a href="#jove-education" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Education</a>
-      </div>
-  
-      <div>
-        <h4 class="text-sm font-bold text-primary mb-1 translatable">İş & Hukuk</h4>
-        <a href="#jove-business" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Business</a>
-      </div>
-  
-      <div>
-        <h4 class="text-sm font-bold text-primary mb-1 translatable">Sanat</h4>
-        <a href="#klasik-muzik" class="block px-2 py-1 text-sm hover:text-primary translatable">Klasik Müzik Koleksiyonu</a>
-        <a href="#caz-koleksiyonu" class="block px-2 py-1 text-sm hover:text-primary translatable">Caz Koleksiyonu</a>
-      </div>
-    </div>
-  
-    <div id="mobile-products" class="space-y-2 mt-2 px-2 sm:hidden">
-
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Yapay Zeka</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#pangram" class="block text-gray-700 translatable">Pangram</a>
-      <a href="#chatpdf" class="block text-gray-700 translatable">ChatPDF</a>
-      <a href="#wonders" class="block text-gray-700 translatable">Wonders</a>
-      <a href="#piri-discovery" class="block text-gray-700 translatable">Piri Keşif</a>
-      <a href="#transleyt" class="block text-gray-700 translatable">Transleyt</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center translatable">
-      Sağlık <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#primal-pictures" class="block text-gray-700 translatable">Primal Pictures</a>
-      <a href="#lecturio" class="block text-gray-700 translatable">Lecturio</a>
-      <a href="#nejmhealer" class="block text-gray-700 translatable">NEJMHealer</a>
-      <a href="#accessmedical" class="block text-gray-700 translatable">AccessMedical</a>
-      <a href="#biorender" class="block text-gray-700 translatable">BioRender</a>
-      <a href="#cochrane-library" class="block text-gray-700 translatable">Cochrane Library</a>
-      <a href="#wiley-dergiler" class="block text-gray-700 translatable">Wiley Dergiler</a>
-      <a href="#wiley-kitaplar" class="block text-gray-700 translatable">Wiley Kitaplar</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Mühendislik</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#accessengineering" class="block text-gray-700 translatable">AccessEngineering</a>
-      <a href="#biorender" class="block text-gray-700 translatable">BioRender</a>
-      <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
-      <a href="#jove-education" class="block text-gray-700 translatable">JoVE Education</a>
-      <a href="#wiley-dergiler" class="block text-gray-700 translatable">Wiley Dergiler</a>
-      <a href="#wiley-kitaplar" class="block text-gray-700 translatable">Wiley Kitaplar</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Fen & Matematik</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
-      <a href="#jove-education" class="block text-gray-700 translatable">JoVE Education</a>
-      <a href="#wiley-dergiler" class="block text-gray-700 translatable">Wiley Dergiler</a>
-      <a href="#wiley-kitaplar" class="block text-gray-700 translatable">Wiley Kitaplar</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Sosyal Bilimler</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
-      <a href="#jove-education" class="block text-gray-700 translatable">JoVE Education</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">İş & Hukuk</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#jove-business" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Business</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Sanat</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#klasik-muzik" class="block text-gray-700 translatable">Klasik Müzik Koleksiyonu</a>
-      <a href="#caz-koleksiyonu" class="block text-gray-700 translatable">Caz Koleksiyonu</a>
-    </div>
-  </div>
-  
-    </div>
-  </div>
-  
-                <a class="hover:text-primary translatable" href="#brochures">Broşürler</a>
-                <a class="hover:text-primary translatable" href="#contact">İletişim</a>
-                <a class="hover:text-primary translatable" href="#announcements">Duyurular</a>
-
-<button id="translateBtn" class="bg-primary text-white px-4 py-2 rounded-md hover:bg-opacity-90 transition-all duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-purple-300 text-sm font-semibold" aria-label="Change Language">
-    English
-</button>
-            </div>
+    <div class="max-w-7xl mx-auto px-4 py-3 flex justify-between items-center">
+        <a class="text-2xl text-primary" href="#">
+            <span class="font-bold">Lib</span>Edge Eğitim ve Danışmanlık
+        </a>
+        <div class="flex items-center space-x-6 text-sm font-medium text-gray-700">
+            <a class="hover:text-primary" href="Products.html">Ürünler</a>
+            <a class="hover:text-primary" href="Brochures.html">Broşürler</a>
+            <a class="hover:text-primary" href="Contact.html">İletişim</a>
+            <!-- Duyurular bağlantısı eklendi -->
+            <a class="text-primary font-semibold" href="Announcements.html">Duyurular</a>
+            <button class="bg-primary text-white px-4 py-2 rounded-md hover:bg-opacity-90">English</button>
         </div>
-    </nav>
+    </div>
+</nav>
 
 
 <!-- Hero Slider Yapısı -->
