--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LibEdge | İçerik Yönetim Paneli</title>
+  window.CMS_MANUAL_INIT = true;
 </head>
 <body>
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
