--- a/admin/index.html
+++ b/admin/index.html
@@ -30,7 +30,7 @@
               {
                 file: "duyurular.json",
                 label: "Tüm Duyurular",
-                name: "all_announcements",
+                name: "all_nouncements",
                 fields: [
                   { label: "Duyuru Listesi", name: "items", widget: "list", fields: [
                       { label: "Başlık", name: "title", widget: "string" },
