--- a/admin/index.html
+++ b/admin/index.html
@@ -4,8 +4,43 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LibEdge | İçerik Yönetim Paneli</title>
+  <!-- Decap CMS'i local olarak yükle -->
+  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f5f5f5;
+    }
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      color: #333;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <div class="container">
+    <h1>LibEdge İçerik Yönetim Sistemi</h1>
+    <div id="nc-root"></div>
+  </div>
+  
+  <script>
+    // CMS yapılandırmasını manuel olarak başlat
+    if (typeof CMS !== 'undefined') {
+      CMS.init();
+      console.log('Decap CMS başlatıldı');
+    } else {
+      console.error('Decap CMS yüklenemedi');
+    }
+  </script>
 </body>
 </html>
