--- a/admin/index.html
+++ b/admin/index.html
@@ -4,43 +4,98 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LibEdge | İçerik Yönetim Paneli</title>
-  <!-- Decap CMS'i local olarak yükle -->
   <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   <style>
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       margin: 0;
-      padding: 20px;
+      padding: 0;
       background-color: #f5f5f5;
     }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    .loading-container {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      text-align: center;
     }
-    h1 {
-      color: #333;
+    .loading-spinner {
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #3498db;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      animation: spin 2s linear infinite;
+      margin-bottom: 20px;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+    .cms-container {
+      display: none;
+    }
+    .error-message {
+      color: #e74c3c;
+      padding: 20px;
+      background-color: #fdf0ed;
+      border-radius: 5px;
+      margin: 20px;
       text-align: center;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>LibEdge İçerik Yönetim Sistemi</h1>
-    <div id="nc-root"></div>
+  <div class="loading-container" id="loading">
+    <div class="loading-spinner"></div>
+    <p>LibEdge İçerik Yönetim Sistemi yükleniyor...</p>
   </div>
   
+  <div class="cms-container" id="cms-root">
+    <!-- Decap CMS burada yüklenecek -->
+  </div>
+  
+  <div class="error-message" id="error-message" style="display: none;">
+    <h3>Yükleme Hatası</h3>
+    <p>İçerik yönetim paneli yüklenirken bir hata oluştu. Lütfen sayfayı yenileyin veya daha sonra tekrar deneyin.</p>
+    <button onclick="window.location.reload()">Sayfayı Yenile</button>
+  </div>
+
   <script>
-    // CMS yapılandırmasını manuel olarak başlat
-    if (typeof CMS !== 'undefined') {
-      CMS.init();
-      console.log('Decap CMS başlatıldı');
-    } else {
-      console.error('Decap CMS yüklenemedi');
+    document.addEventListener('DOMContentLoaded', function() {
+      // CMS yüklendikten sonra çalışacak
+      if (typeof CMS !== 'undefined') {
+        try {
+          // CMS'i manuel olarak başlat
+          CMS.init();
+          console.log('Decap CMS başlatıldı');
+          
+          // Yükleme ekranını gizle, CMS'i göster
+          document.getElementById('loading').style.display = 'none';
+          document.getElementById('cms-root').style.display = 'block';
+        } catch (error) {
+          console.error('CMS başlatma hatası:', error);
+          showError('CMS başlatma hatası: ' + error.message);
+        }
+      } else {
+        console.error('Decap CMS kütüphanesi yüklenemedi');
+        showError('Decap CMS kütüphanesi yüklenemedi. Lütfen internet bağlantınızı kontrol edin.');
+      }
+    });
+
+    function showError(message) {
+      document.getElementById('loading').style.display = 'none';
+      document.getElementById('error-message').style.display = 'block';
+      document.getElementById('error-message').innerHTML += '<p>' + message + '</p>';
     }
+
+    // 10 saniye içinde yüklenmezse hata göster
+    setTimeout(function() {
+      if (document.getElementById('loading').style.display !== 'none') {
+        showError('Yükleme zaman aşımına uğradı. Lütfen sayfayı yenileyin.');
+      }
+    }, 10000);
   </script>
 </body>
 </html>
