--- a/admin/index.html
+++ b/admin/index.html
@@ -177,7 +177,7 @@
     
     // GitHub OAuth için Client ID (Cloudflare Pages environment variable'dan alınabilir)
     // BU DEĞERİ GÜNCELLEMEYİ UNUTMAYIN!
-    const GITHUB_CLIENT_ID = 'YOUR_GITHUB_CLIENT_ID';
+    const GITHUB_CLIENT_ID = 'Ov23lidMzyuYibko4gCs';
     
     // CMS'in daha önce yüklenip yüklenmediğini kontrol et
     let cmsInitialized = false;
