--- a/admin/index.html
+++ b/admin/index.html
@@ -168,7 +168,7 @@
   </div>
 
   <!-- Decap CMS'i doğrudan yükle -->
-  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <script src="https://unpkg.com/@sveltia/cms/dist/sveltia-cms.js"></script>
   
   <script>
     // Sayfa URL'lerini ayarla
