--- a/Announcements.html
+++ b/Announcements.html
@@ -207,13 +207,13 @@
 <body class="min-h-screen">
     <nav class="bg-white/90 backdrop-blur-md shadow-lg sticky top-0 z-50">
         <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
-            <a class="text-2xl text-primary" href="#">
+            <a class="text-2xl text-primary" href="https://libedge-website.pages.dev/">
                 <span class="font-bold">Lib</span>Edge Eğitim ve Danışmanlık
             </a>
             <div class="flex items-center space-x-6 text-sm font-medium text-gray-700">
-                <a class="hover:text-primary transition-colors" href="#">Ürünler</a>
-                <a class="hover:text-primary transition-colors" href="#">Broşürler</a>
-                <a class="hover:text-primary transition-colors" href="#">İletişim</a>
+                <a class="hover:text-primary transition-colors" href="https://libedge-website.pages.dev/urunler">Ürünler</a>
+                <a class="hover:text-primary transition-colors" href="https://libedge-website.pages.dev/brosurler">Broşürler</a>
+                <a class="hover:text-primary transition-colors" href="https://libedge-website.pages.dev/iletisim">İletişim</a>
                 <a class="text-primary font-semibold relative" href="#">
                     Duyurular
                     <span class="notification-dot absolute -top-1 -right-1 w-2 h-2 bg-red-500 rounded-full"></span>
