--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <i class="fas fa-chevron-down ml-1 text-xs"></i>
     </a>
   
-    <div class="dropdown absolute left-0 mt-2 bg-white shadow-lg rounded-lg z-20 p-4 space-y-4 w-[340px] hidden sm:block">
+    <div class="dropdown absolute left-0 mt-2 bg-white/90 backdrop-blur-sm shadow-lg rounded-lg z-20 p-4 space-y-4 w-[340px] hidden sm:block">
       <div>
         <h4 class="text-sm font-bold text-primary mb-1 translatable">Yapay Zeka</h4>
         <a href="#pangram" class="block text-gray-700 translatable">Pangram</a>
@@ -136,85 +136,6 @@
     </div>
   
     <div id="mobile-products" class="space-y-2 mt-2 px-2 sm:hidden">
-
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Yapay Zeka</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#pangram" class="block text-gray-700 translatable">Pangram</a>
-      <a href="#chatpdf" class="block text-gray-700 translatable">ChatPDF</a>
-      <a href="#wonders" class="block text-gray-700 translatable">Wonders</a>
-      <a href="#piri-discovery" class="block text-gray-700 translatable">Piri Keşif</a>
-      <a href="#transleyt" class="block text-gray-700 translatable">Transleyt</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center translatable">
-	Sağlık</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#primal-pictures" class="block text-gray-700 translatable">Primal Pictures</a>
-      <a href="#lecturio" class="block text-gray-700 translatable">Lecturio</a>
-      <a href="#nejmhealer" class="block text-gray-700 translatable">NEJMHealer</a>
-      <a href="#accessmedical" class="block text-gray-700 translatable">AccessMedical</a>
-      <a href="#cochrane-library" class="block text-gray-700 translatable">Cochrane Library</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Mühendislik</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#accessengineering" class="block text-gray-700 translatable">AccessEngineering</a>
-      <a href="#biorender" class="block text-gray-700 translatable">BioRender</a>
-      <a href="#wiley-dergiler" class="block text-gray-700 translatable">Wiley Dergiler</a>
-      <a href="#wiley-kitaplar" class="block text-gray-700 translatable">Wiley Kitaplar</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Fen & Matematik</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
-      <a href="#jove-education" class="block text-gray-700 translatable">JoVE Education</a>
-      <a href="#wiley-dergiler" class="block text-gray-700 translatable">Wiley Dergiler</a>
-      <a href="#wiley-kitaplar" class="block text-gray-700 translatable">Wiley Kitaplar</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Sosyal Bilimler</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
-      <a href="#jove-education" class="block text-gray-700 translatable">JoVE Education</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">İş & Hukuk</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
-    </div>
-  </div>
-  
-  <div class="group">
-    <button onclick="toggleDropdown(this)" class="w-full text-left text-primary font-semibold flex justify-between items-center">
-      <span class="translatable">Sanat</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
-    </button>
-    <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#klasik-muzik" class="block text-gray-700 translatable">Klasik Müzik Koleksiyonu</a>
-      <a href="#caz-koleksiyonu" class="block text-gray-700 translatable">Caz Koleksiyonu</a>
-    </div>
-  </div>
   
     </div>
   </div>
@@ -223,7 +144,7 @@
                 <a class="hover:text-primary translatable" href="#contact">İletişim</a>
                 <a class="text-primary font-semibold" href="Announcements.html">Duyurular</a>
                 <button id="translateBtn" class="bg-primary text-white px-4 py-2 rounded-md hover:bg-opacity-90 transition-all duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-purple-300 text-sm font-semibold" aria-label="Change Language">
-                </button>
+            </button>
             </div>
         </div>
     </nav>
@@ -369,7 +290,7 @@
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-blue-400">
-                            <img alt="ChatPDF Logo" class="product-image" src="assets/images/ChatPDF_LOGO.JPEG" loading="lazy" />
+                            <img alt="ChatPDF Logo" class="product-image" src="assets/images/ChatPDF_LOGO.webp" loading="lazy" />
                             <h3 class="text-xl font-semibold text-center text-primary translatable">ChatPDF</h3>
                             <div class="badge-container">
                                 <span class="badge-label translatable">Yetkili Bölge:</span>
