--- a/Announcements.html
+++ b/Announcements.html
@@ -211,9 +211,9 @@
                 <span class="font-bold">Lib</span>Edge Eğitim ve Danışmanlık
             </a>
             <div class="flex items-center space-x-6 text-sm font-medium text-gray-700">
-                <a class="hover:text-primary transition-colors" href="https://libedge-website.pages.dev/urunler">Ürünler</a>
-                <a class="hover:text-primary transition-colors" href="https://libedge-website.pages.dev/brosurler">Broşürler</a>
-                <a class="hover:text-primary transition-colors" href="https://libedge-website.pages.dev/iletisim">İletişim</a>
+                <a class="hover:text-primary transition-colors" href="https://libedge-website.pages.dev/#Products">Ürünler</a>
+                <a class="hover:text-primary transition-colors" href="https://libedge-website.pages.dev/#brochures">Broşürler</a>
+                <a class="hover:text-primary transition-colors" href="https://libedge-website.pages.dev/#contact">İletişim</a>
                 <a class="text-primary font-semibold relative" href="#">
                     Duyurular
                     <span class="notification-dot absolute -top-1 -right-1 w-2 h-2 bg-red-500 rounded-full"></span>
