--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
                 <a class="hover:text-primary translatable" href="#brochures">Broşürler</a>
                 <a class="hover:text-primary translatable" href="#contact">İletişim</a>
                 <a class="text-primary font-semibold" href="Announcements.html">Duyurular</a>
-                <button id="translateBtn" class="bg-primary text-white px-4 py-2 rounded-md hover:bg-opacity-90 transition-all duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-purple-300 text-sm font-semibold" aria-label="Change Language">
-            </button>
+<button id="translateBtn" class="bg-primary text-white px-4 py-2 rounded-md hover:bg-opacity-90 transition-all duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-purple-300 text-sm font-semibold" aria-label="Change Language">
+    <span id="translateText">English</span>
+</button>
             </div>
         </div>
     </nav>
