--- a/index.html
+++ b/index.html
@@ -1041,8 +1041,9 @@
             </div>
 
             <div class="md:w-2/3 p-8">
-                <form action="#" method="POST" class="space-y-6">
-                    <div>
+                <form id="contactForm" method="POST" class="space-y-6">
+                <input type="hidden" name="formType" value="contact">
+                      <div>
                         <label for="name" class="block text-sm font-medium text-gray-700 dark:text-gray-300 translatable">Adınız Soyadınız</label>
                         <input type="text" name="name" id="name" autocomplete="name" required
                             class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 dark:bg-gray-700 dark:border-gray-600 dark:text-white dark:focus:ring-indigo-600 dark:focus:border-indigo-600 transition duration-150 ease-in-out">
