--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <div class="relative group">
     <a id="products-menu-toggle" onclick="toggleProductsMenu()" class="hover:text-primary font-semibold flex items-center cursor-pointer sm:cursor-default translatable">
-Ürünler</span>
+Ürünler
       <i class="fas fa-chevron-down ml-1 text-xs"></i>
     </a>
   
