--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   
       <div>
         <h4 class="text-sm font-bold text-primary mb-1 translatable">İş & Hukuk</h4>
-        <a href="#jove-dergiler" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Research</a>
+        <a href="#jove-business" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Business</a>
       </div>
   
       <div>
@@ -492,7 +492,7 @@
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-teal-400">
-                            <img alt="JoVE Education Logo" class="product-image" src="assets/images/JOVE_LOGO.PNG" loading="lazy" />
+                            <img alt="JoVE Business Logo" class="product-image" src="assets/images/JOVE_LOGO.PNG" loading="lazy" />
                             <h3 class="text-xl font-semibold text-center text-primary translatable">JoVE Business</h3>
                             <div class="badge-container">
                                 <span class="badge-label translatable">Yetkili Bölge:</span>
