--- a/index_geri getir.html
+++ b/index_geri getir.html
@@ -286,7 +286,7 @@
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-blue-400">
-                            <img alt="ChatPDF Logo" class="product-image" src="assets/images/ChatPDF_LOGO.JPEG" loading="lazy" />
+                            <img alt="ChatPDF Logo" class="product-image" src="assets/images/ChatPDF_LOGO.webp" loading="lazy" />
                             <h3 class="text-xl font-semibold text-center text-primary translatable">ChatPDF</h3>
                             <div class="badge-container">
                                 <span class="badge-label translatable">Yetkili Bölge:</span>
@@ -424,7 +424,7 @@
                 </div>
             </div>
 
-            <div class="product-card-container" data-subjects="fen-matematik,is-hukuk,muhendislik,saglik,sosyal-bilimler" id="jove-dergiler">
+            <div class="product-card-container" data-subjects="fen-matematik,muhendislik,saglik,sosyal-bilimler" id="jove-dergiler">
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-teal-400">
@@ -451,7 +451,7 @@
                                 </ul>
                                 <div class="mt-auto flex justify-center space-x-4">
                                     <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
-                                    <a href="https://www.jove.com/methods" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
+                                    <a href="https://app.jove.com/research" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
                                 </div>
                             </div>
                         </div>
@@ -460,7 +460,7 @@
                 </div>
             </div>
 
-            <div class="product-card-container" data-subjects="fen-matematik,is-hukuk,muhendislik,saglik,sosyal-bilimler" id="jove-education">
+            <div class="product-card-container" data-subjects="fen-matematik,muhendislik,saglik,sosyal-bilimler" id="jove-education">
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-teal-400">
@@ -481,7 +481,35 @@
                             </ul>
                             <div class="flex justify-center space-x-4 mt-auto">
                                 <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
-                                <a href="https://www.jove.com/science-education" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
+                                <a href="https://app.jove.com/education" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                        <div class="product-card-container" data-subjects="is-hukuk" id="jove-business">
+                <div class="flip-card h-full">
+                    <div class="flip-inner h-full">
+                        <div class="flip-front border-teal-400">
+                            <img alt="JoVE Business Logo" class="product-image" src="assets/images/JOVE_LOGO.PNG" loading="lazy" />
+                            <h3 class="text-xl font-semibold text-center text-primary translatable">JoVE Business</h3>
+                            <div class="badge-container">
+                                <span class="badge-label translatable">Yetkili Bölge:</span>
+                                <span class="badge-turkey translatable">Türkiye</span>
+                                <span class="badge-middleeast invisible translatable">Orta Doğu</span>
+                            </div>
+                        </div>
+                        <div class="flip-back bg-teal-50">
+                            <h4 class="text-lg font-bold mb-3 text-teal-800 translatable">JoVE Business</h4>
+                            <ul class="text-xs text-black space-y-1 mb-4">
+                                <li class="translatable">✔ İşletme ve yönetim odaklı video içeriği</li>
+                                <li class="translatable">✔ Finans, Pazarlama, Mikroekonomi</li>
+                                <li class="translatable">✔ Animasyonlu dersler</li>
+                            </ul>
+                            <div class="flex justify-center space-x-4 mt-auto">
+                                <a href="#brochures" class="bg-primary text-white py-2 px-4 rounded-lg hover:bg-opacity-90 transition text-xs translatable">Broşür</a>
+                                <a href="https://www.jove.com/business" target="_blank" class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition text-xs whitespace-nowrap translatable">Erişim Linki</a>
                             </div>
                         </div>
                     </div>
@@ -604,7 +632,7 @@
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-red-400">
-                            <img alt="BioRender Logo" class="product-image" src="assets/images/biorender_logo.png" loading="lazy" />
+                            <img alt="BioRender Logo" class="product-image" src="assets/images/biorender_logo.webp" loading="lazy" />
                             <h3 class="text-xl font-semibold text-center text-primary translatable">BioRender</h3>
                             <div class="badge-container">
                                 <span class="badge-label translatable">Yetkili Bölge:</span>
