--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <div class="relative group">
     <a id="products-menu-toggle" onclick="toggleProductsMenu()" class="hover:text-primary font-semibold flex items-center cursor-pointer sm:cursor-default translatable">
-Ürünler</span>
+Ürünler
       <i class="fas fa-chevron-down ml-1 text-xs"></i>
     </a>
   
@@ -125,7 +125,7 @@
   
       <div>
         <h4 class="text-sm font-bold text-primary mb-1 translatable">İş & Hukuk</h4>
-        <a href="#jove-dergiler" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Research</a>
+        <a href="#jove-business" class="block px-2 py-1 text-sm hover:text-primary translatable">JoVE Business</a>
       </div>
   
       <div>
@@ -202,7 +202,7 @@
       <span class="translatable">İş & Hukuk</span> <i class="fas fa-chevron-down ml-2 text-xs"></i>
     </button>
     <div class="dropdown-list hidden pl-4 pt-2 text-sm space-y-1">
-      <a href="#jove-dergiler" class="block text-gray-700 translatable">JoVE Research</a>
+      <a href="#jove-business" class="block text-gray-700 translatable">JoVE Business</a>
     </div>
   </div>
   
@@ -223,15 +223,11 @@
                 <a class="hover:text-primary translatable" href="#contact">İletişim</a>
                 <a class="text-primary font-semibold" href="Announcements.html">Duyurular</a>
                 <button id="translateBtn" class="bg-primary text-white px-4 py-2 rounded-md hover:bg-opacity-90 transition-all duration-300 flex items-center justify-center focus:outline-none focus:ring-2 focus:ring-purple-300 text-sm font-semibold" aria-label="Change Language">
+    <span id="translateText">English</span>
                 </button>
             </div>
         </div>
-    </nav>
-
-        </div>
-    </div>
-</nav>
-
+     </nav>
 
 <!-- Hero Slider Yapısı -->
 <main class="hero-slider-container">
@@ -369,7 +365,7 @@
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-blue-400">
-                            <img alt="ChatPDF Logo" class="product-image" src="assets/images/ChatPDF_LOGO.JPEG" loading="lazy" />
+                            <img alt="ChatPDF Logo" class="product-image" src="assets/images/ChatPDF_LOGO.webp" loading="lazy" />
                             <h3 class="text-xl font-semibold text-center text-primary translatable">ChatPDF</h3>
                             <div class="badge-container">
                                 <span class="badge-label translatable">Yetkili Bölge:</span>
@@ -575,7 +571,7 @@
                 <div class="flip-card h-full">
                     <div class="flip-inner h-full">
                         <div class="flip-front border-teal-400">
-                            <img alt="JoVE Education Logo" class="product-image" src="assets/images/JOVE_LOGO.PNG" loading="lazy" />
+                            <img alt="JoVE Business Logo" class="product-image" src="assets/images/JOVE_LOGO.PNG" loading="lazy" />
                             <h3 class="text-xl font-semibold text-center text-primary translatable">JoVE Business</h3>
                             <div class="badge-container">
                                 <span class="badge-label translatable">Yetkili Bölge:</span>
